LPS-122712 Fix layout issue of search empty state

--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/components/_empty_state.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/components/_empty_state.scss
@@ -1,5 +1,6 @@
 .taglib-empty-result-message {
 	margin: auto;
+	margin-top: 0 !important;
 	padding: 0 2rem;
 
 	&-description.empty-message-color {
